meteor/vanilla console logs json

--- a/meteor/simple-structure/client/main.html
+++ b/meteor/simple-structure/client/main.html
@@ -5,8 +5,8 @@
 <body>
   <h1>Welcome to Meteor!</h1>
 
-  {{> hello}}
-  {{> info}}
+  <!-- {{> hello}}
+  {{> info}} -->
 
   {{> upload}}
 </body>
