--- a/meteor/vanilla/client/main.html
+++ b/meteor/vanilla/client/main.html
@@ -5,24 +5,19 @@
 <body>
   <h1>GO App!</h1>
 
-  {{> upload}}
+  <!-- {{> upload}} -->
   {{> grid}}
 </body>
 
-<template name="upload">
-  <h4>upload template yo</h4>
 
-  <!-- {{#unless uploading}} -->
-  <input type="file" name="uploadCSV" >
-  <!-- {{else}} -->
-  <!-- <p><i class="fa fa-spin fa-refresh"></i>Uploading your file...</p> -->
-  <!-- {{/unless}} -->
-</template>
+<!--
+Read the comments √
+Use the templates
+Include the db
+React-Meteor
+Just React
+Just Vue
 
-<template name="grid">
-    <h1>Hey from items template</h1>
-  <ul>
-<!-- TODO: get the event object. Build Bootstrap Card template -->
-    {{itemData}}
-  </ul>
-</template>
+
+
+ -->
