--- a/meteor/neworder/client/main.html
+++ b/meteor/neworder/client/main.html
@@ -9,8 +9,8 @@
   {{> info}} -->
   {{> grid}}
   <!-- <script src="./script.js"></script> -->
-  <!-- <script src="https://unpkg.com/packery@2/dist/packery.pkgd.min.js"></script>
-  <script src="https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js"></script> -->
+  <script src="https://unpkg.com/packery@2/dist/packery.pkgd.min.js"></script>
+  <script src="https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js"></script>
 
 </body>
 
